# star-resonance-relay

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
docs/: chat-packets.md
scripts/: generate_protobufs.py
src/star_resonance_relay/: bot.py  processor.py  sniffer.py
